--- a/homepage.css
+++ b/homepage.css
@@ -1,21 +1,44 @@
 .field {
-  width: 120px;
-  margin: 0 0.5em 0.5em 0;
+  width: 80px;
+  margin-top: 10px;
+  margin-right: 5px;
   float: left;
   clear: left;
   text-align: right;
 }
 
+#description{
+  margin-top: 150px;
+  margin-left: 250px;
+}
+
 #box {
+  border-style: solid;
   border-width: medium;
   height: 200px;
-  width: 150%;
+  width: 400px;
+  float: left;
+  margin-top: 10px;
+  padding-left: 5px;
+}
+
+#goButton{
+  margin-left: 120px;
+  margin-top: 10px;
 }
 
 #searchBox {
+  border-style: solid;
   border-width: medium;
-  height: 300px;
-  width: 150%;
+  height: 200px;
+  width: 400px;
+  margin-right: 200px;
+  margin-top: 10px;
+  float: right;
+}
+
+.value {
+  margin-top: 10px;
 }
 
 input:focus{
