--- a/searchPage.css
+++ b/searchPage.css
@@ -1,12 +1,66 @@
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topLine {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 5px 389px; /*1:height, 2:width */
+  top: 63px;
+  left: 255px;
+}
+
+.topLine a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header #search {
+  font-size: 25px;
+  font-weight: bold;
+}
+
 .ViewSort {
+  float: right;
+}
 
-  width: 80%;
-  height: 100%;
+.searchOutput {
+  background-color: #f1f1f1;
+  padding: 5px 389px; /*1:height, 2:width */
+  top: 300px; /* move up or down */
+  left: 255px;
+}
 
-  position: relative;
-  left: 254px; /* move this "box" to the left */
-  top: 4px; /* move this "box" down */
+.searchOutput #address {
+}
 
-  display: inline-block;
-  background-color: pink;
+.searchOutput #title {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.searchOutput #website {
+  color: #00b1c4;
+  text-decoration: underline;
+}
+
+.searchOutput #item {
+  align-items:center;
+  padding: 10px 0px; /*1:height, 2:width */
+}
+
+img {
+  float: left;
+  margin-right: 1rem;
+  width: 180px;
+  height: 100px;
+}
+
 }
