--- a/searchPageSideNav.css
+++ b/searchPageSideNav.css
@@ -4,7 +4,7 @@
   position: fixed;
   z-index: 1;
   top: 63px; /* move sidenav up or down */
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
   overflow-x: hidden;
   padding: 8px 0;
 }
