--- a/searchPage.css
+++ b/searchPage.css
@@ -1,11 +1,10 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .topLine {
   overflow: hidden;
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
   padding: 5px 389px; /*1:height, 2:width */
   top: 63px;
   left: 255px;
@@ -32,13 +31,14 @@ body {
 }
 
 .searchOutput {
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
   padding: 5px 389px; /*1:height, 2:width */
   top: 300px; /* move up or down */
   left: 255px;
 }
 
-.searchOutput #address {
+.searchOutput #price {
+  color: green;
 }
 
 .searchOutput #title {
