--- a/header.css
+++ b/header.css
@@ -6,7 +6,7 @@ body {
 
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #557a95;
   padding: 5px 10px; /*1:height, 2:width */
 }
 
