making the header match the search results page

--- a/header.css
+++ b/header.css
@@ -13,7 +13,7 @@ body {
 .header a {
   font: 'Playfair Display';
   float: left;
-  color: black;
+  color: #e3e3e3;
   text-align: center;
   padding: 12px;
   text-decoration: none;
