--- a/searchPage.css
+++ b/searchPage.css
@@ -5,7 +5,6 @@ body {
 
 .topLine {
   overflow: hidden;
-  /* background-color: #f1f1f1; */
   padding: 5px 389px; /*1:height, 2:width */
   top: 63px;
   left: 255px;
@@ -27,17 +26,16 @@ body {
   font-weight: bold;
 }
 
-.ViewSort {
-  float: right;
-}
-
 #Date {
   width: 153px;
 }
 
+#Sort {
+  height: 23px;
+}
+
 .searchOutput {
   color: #e3e3e3;
-  /* background-color: #f1f1f1; */
   padding: 5px 389px; /*1:height, 2:width */
   top: 300px; /* move up or down */
   left: 255px;
@@ -50,7 +48,7 @@ body {
 
 .searchOutput #title {
   font-weight: bold;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   font-size: 20px;
 }
 
