--- a/resources/header.css
+++ b/resources/header.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header a {
-  font: 'Playfair Display';
+  font-family: 'Playfair Display', serif;
   float: left;
   color: #e3e3e3;
   text-align: center;
