--- a/FAQpage/FAQpage.css
+++ b/FAQpage/FAQpage.css
@@ -1,16 +1,42 @@
 
 .FAQ {
-  
+  text-align: middle;
+  font-size: 2em;
 }
 
 .searchBar {
-
+  padding-left: 50px;
+  padding-top: 20px;
+  margin-left: 50px;
+  margin-top: 20px;
+  align-items: center;
 }
 
 .scroller {
-
+  overflow:scroll;
 }
 
 .questionAnswer {
+  padding
+  float: left;
+}
 
+input:focus{
+  border: 1px solid #a0acbf;
+  background-color: #fee;
+}
+
+h1 {
+  color: #e3e3e3;
+  margin-left: 37.25%;
+  font-family: 'Playfair Display', serif;
+}
+
+h3 {
+  /* border: 3px solid grey; */
+  color: #e3e3e3;
+  width: 400px;
+  height: 175px;
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
 }
