--- a/FAQpage/FAQpage.css
+++ b/FAQpage/FAQpage.css
@@ -17,6 +17,15 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+hr {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-top: 1px solid black;
+}
 .searchButton {
   float: right;
 }
