--- a/homepage.css
+++ b/homepage.css
@@ -11,7 +11,7 @@ body {
   clear: left;
   text-align: right;
 }
-/*styling the inout fields to input date, capacity and price range*/
+/*styling the input fields to input date, capacity and price range*/
 
 #description{
   margin-top: 150px;
