--- a/searchpage/searchPage.css
+++ b/searchpage/searchPage.css
@@ -53,10 +53,10 @@ body {
   font-family: 'Playfair Display', serif;
   font-weight: bold;
   font-size: 20px;
+  color: #b0e9ff;
 }
 
 .searchOutput #website {
-  color: #b0e9ff;
   text-decoration: underline;
 }
 
@@ -73,4 +73,6 @@ img {
   height: 100px;
 }
 
+a {
+  color: #b0e9ff;
 }
