--- a/searchpage/searchPage.css
+++ b/searchpage/searchPage.css
@@ -53,7 +53,6 @@ body {
   font-family: 'Playfair Display', serif;
   font-weight: bold;
   font-size: 20px;
-  color: #b0e9ff;
 }
 
 .searchOutput #website {
@@ -74,5 +73,8 @@ img {
 }
 
 a {
+  color: #b0e9ff;
+}
+a:visited {
   color: #b0e9ff;
 }
