Fixing up hyperlinks on each page

--- a/searchpage/searchPage.css
+++ b/searchpage/searchPage.css
@@ -78,3 +78,11 @@ a {
 a:visited {
   color: #b0e9ff;
 }
+
+input:focus{
+  border: 1px solid #a0acbf;
+}
+
+select:focus{
+  border: 1px solid #a0acbf;
+}
