--- a/homepage.css
+++ b/homepage.css
@@ -51,7 +51,10 @@ body {
 
 input:focus{
   border: 1px solid #a0acbf;
-  background-color: #fee;
+}
+
+select:focus{
+  border: 1px solid #a0acbf;
 }
 
 #slogan {
