--- a/searchpage/searchPageSideNav.css
+++ b/searchpage/searchPageSideNav.css
@@ -1,3 +1,5 @@
+/* Based off of https://www.w3schools.com/howto/howto_js_sidenav.asp */
+
 .sidenav { /*the "box" of the sidenav */
   width: 250px;
   height: 500px;
@@ -42,8 +44,8 @@
 }
 
 .main {
-  margin-left: 140px; /* Same width as the sidebar + left position in px */
-  font-size: 28px; /* Increased text to enable scrolling */
+  margin-left: 140px;                                                           /* Same width as the sidebar + left position in px */
+  font-size: 28px;                                                              /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
 
