--- a/resources/header.css
+++ b/resources/header.css
@@ -1,53 +1,40 @@
+/* Based off of https://www.w3schools.com/howto/howto_css_responsive_header.asp */
+
 * {box-sizing: border-box;}
 
-body {
-  margin: 0;
+body {                                                                          /* The entire page */
+  margin: 0;                                                                    /* Keeps the header aligned at the very top of the page */
 }
 
-.header {
-  overflow: hidden;
-  background-color: #557a95;
-  padding: 5px 10px; /*1:height, 2:width */
+.header {                                                                       /* The entire header */
+  background-color: #557a95;                                                    /* Make the background color a darker blue */
+  overflow: hidden;                                                             /* Have the dark blue background cover all of the text */
+  padding: 5px 10px;                                                            /* Change the 1:height and 2:width */
 }
 
-.header a {
-  font-family: 'Playfair Display', serif;
-  float: left;
-  color: #e3e3e3;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
+.header a {                                                                     /* All of the content in the header */
+  font-family: 'Playfair Display', serif;                                       /* Change the font */
+  color: #e3e3e3;                                                               /* Change the text color to a white */
+  font-size: 18px;                                                              /* Change the font size */
+  float: left;                                                                  /* Makes the background/header thicker */
+  padding: 12px;                                                                /* Padding between each item */
+  text-decoration: none;                                                        /* Hide hyperlink underline */
+  line-height: 25px;                                                            /* Makes lines less tall */
 }
 
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
+.header a.logo {                                                                /* Just the logo in the header */
+  font-size: 25px;                                                              /* Make this font size bigger */
+  font-weight: bold;                                                            /* Make this font bold */
 }
 
-.header a:hover {
-  color: black;
+.headerWords {                                                                  /* All the words other than the logo */
+  float: right;                                                                 /* Float to the right */
 }
 
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
+.header a:hover {                                                               /* When a hyperlink is hovered */
+  color: black;                                                                 /* Change the font color to black */
 }
 
-.headerWords {
-  float: right;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header-right {
-    float: none;
-  }
+.header a:visited {                                                             /* When a hyperlink has been previously clicked */
+  color: #e3e3e3;                                                               /* Keep the color the same */
 }
