--- a/policypage/PolicyPage.css
+++ b/policypage/PolicyPage.css
@@ -1,5 +1,5 @@
 h3 {
-
+font-family: 'Playfair Display', serif;
 text-align: center;
 font-size: 36px;
 color: white;
@@ -14,7 +14,7 @@ body {
 p {
 	text-align: center;
 	color: white;
-
-
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 20px;
 
 }
